# building-a-debugger

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
.dev/: Dockerfile  Makefile  layout.yaml  project  remove  start  stop  tmux.conf  zshrc
.dev/config/nvim/: lazyvim.json
.dev/config/nvim/lua/plugins/: colorscheme.lua  oil.lua
bad.rs/: .gitignore  Cargo.toml  README.md
bad.rs/bad-cli/: Cargo.toml
bad.rs/bad-cli/src/: cli.rs  main.rs
bad.rs/bad-cli/src/cmd/: attach.rs  launch.rs  mod.rs
bad.rs/libbad/: Cargo.toml
bad.rs/libbad/src/: lib.rs  messages.rs
bad.rs/libbad/tests/: integration.rs
cli/: CMakeLists.txt
include/aidbg/: aidbg.hpp
include/bad/: bad.hpp
include/dbg/: dbg.hpp
src/: CMakeLists.txt  aidbg.cpp  bad.cpp  dbg.cpp  messages.cpp  messages.hpp
test/: CMakeLists.txt  test_aidbg.cpp  test_bad.cpp  test_dbg.cpp
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  main.cpp
tools/cli/cmd/: attach.cpp  attach.hpp  launch.cpp  launch.hpp
